Prevent jump for full width rows

--- a/css/front.less
+++ b/css/front.less
@@ -35,3 +35,14 @@
 .panel-row-style {
 	.clearfix();
 }
+
+.siteorigin-panels-stretch {
+	margin-right: -1000px;
+	margin-left: -1000px;
+	padding-right: 1000px;
+	padding-left: 1000px;
+}
+
+body.siteorigin-panels-before-styling {
+	overflow-x: hidden;
+}
